# scraper-novela

./: .env.example  .gitignore  Dockerfile.apertium-eng-spa  README.md  main.py  pyproject.toml  requirements.txt
_legacy/: generate_epubs.py  generate_pdfs.py  scrape_lightnovelpub.py  translate_hybrid.py  translate_to_es_apertium.py  translate_to_es_ollama.py
adapters/: __init__.py  base.py  gemini_adapter.py  minimax_adapter.py  openai_adapter.py
config/: ingest_glossary.json  settings.yaml  translation_glossary.json  translation_glossary.json.bak
core/: domain.py  text_processor.py
data/: alignment_map.json  glossary.json
docs/: arquitectura.md  estado_actual.md  estado_actual_v2.md  estructura_pagina.md  formato_salida.md  translation_process.md
interfaces/: translator.py
reader-app/: index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
scraper/: lightnovelpub.py  translate_to_es.py
scratch/: check_api.py  compare_quality.py  list_models.py  list_models_v2.py  model_list.txt  test_keys.py
scripts/: aligner.py  apertium_docker.sh  batch_extract_glossary.py  build_apertium_eng_spa.sh  build_master_glossary.py  check_consistency.py  combine_chapters.py  compare_names.py  debug_alignment.py  fix_glossary_errors.py  generate_epub.py  generate_pdf.py  generate_pdfs copy.py  glossary_extractor.py  glossary_gen.py  polish.py  prepare_reader_data.py  repair_and_latam_refine.py  repair_placeholders.py  run_ollama_translation.sh  scraper.py  translate_cn.py  translator.py
traduccion/: 0001_es.txt  0389_es.txt  0390_es.txt  (+31 more)
(+1178 files in other folders)
